# Agentic-AI-Projects

Doctor-Appointment-Project/: README.md  api.py  implementation_roadmap.md  main.py  pyproject.toml  requirements.txt  streamlit_ui.py
Doctor-Appointment-Project/dental_agent/: agent.py  utils.py
Doctor-Appointment-Project/dental_agent/agents/: booking_agent.py  cancellation_agent.py  info_agent.py  rescheduling_agent.py  supervisor.py
Doctor-Appointment-Project/dental_agent/config/: settings.py
Doctor-Appointment-Project/dental_agent/tools/: csv_reader.py  csv_writer.py
Doctor-Appointment-Project/dental_agent/workflows/: graph.py
KaustavGPT-Chatbot/: chatbot.db  chatbot.db-shm  chatbot.db-wal
Mcq-generator/mcq_generator/: README.md  requirements.txt
Shopping_Assistant/: README.md  ROADMAP_IMPLEMENTATION.md  main.py  requirements.txt  streamlit_app.py  text.txt
Shopping_Assistant/agents/: __init__.py  aggregator_agent.py  budget_agent.py  comparison_agent.py  llm.py  query_agent.py  recommendation_agent.py  review_agent.py  schemas.py  search_agent.py
Shopping_Assistant/graph/: __init__.py  shopping_graph.py
Shopping_Assistant/tools/: __init__.py  search_tools.py
Voyage-Trip-Planner/: README.md  implementation_plan.md  main.py  requirements.txt  streamlit_app.py  template.py
Voyage-Trip-Planner/agents/: __init__.py
Voyage-Trip-Planner/graph/: __init__.py  trip_graph.py
Voyage-Trip-Planner/llm/: __init__.py  groq_client.py
Voyage-Trip-Planner/models/: __init__.py  trip_models.py
Voyage-Trip-Planner/nodes/: __init__.py  aggregator.py  (+7 more)
(+18 files in other folders)
